--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <!-- PROFILE IMAGE -->
       <div class="profile">
-        <img src="./images/CV's photo.jpg" alt="profile image" />
+        <img src="./images/photo.jpg" alt="profile image" />
         <div class="name">Dmytro <span>Stepanov</span></div>
         <div class="position">Junior Front-end Developer</div>
       </div>
