--- a/index.html
+++ b/index.html
@@ -100,9 +100,12 @@
         <div class="descpirtion">
           <strong>Merchandiser</strong>
           <p class="organization">@ Global Spirits Europe, LTD</p>
-          <p>
-            Started to practice the most effective to-do list: The Eisenhower Matrix in casual life and work. I have developed self-confidence, self-awareness, optimism, flexibility, responsibility, problem-solving and utterly improved communication and teamwork.
-          </p>
+          <ul class="work-list">
+							<li class="work-list-item">Collaborating with suppliers, manufacturers, and stores to ensure proper execution of plans. </li>
+							<li class="work-list-item">Analyzing sales figures, customers reactions and market trends to anticipate product needs.</li>
+							<li class="work-list-item">Managing layout plans of store and maintain inventory of products. </li>
+							<li class="work-list-item">Creating and organizing promotions and advertising campaigns. </li>
+						</ul>
         </div>
       </div>
 
@@ -111,9 +114,13 @@
         <div class="descpirtion">
           <strong>Sales manager</strong>
           <p class="organization">@ Tavria +, LTD</p>
-          <p>
-            I have enhanced the skills of empathy, listening, clarity, non-verbal communication. Started to became personable and respectful. 
-          </p>
+          <ul class="work-list">
+							<li class="work-list-item">Create and execute a strategic sales plan that expands customer base and extends global reach. </li>
+							<li class="work-list-item">Meet with potential clients and grow long-lasting relationships by understanding their needs.</li>
+							<li class="work-list-item">Track, analyze, and communicate key quantitative metrics and business trends as they relate to partner relationships.</li>
+							<li class="work-list-item">Identify knowledge gaps within the team and develop a plan to fulfill them.</li>
+							
+						</ul>
         </div>
       </div>
 
@@ -122,9 +129,12 @@
         <div class="descpirtion">
           <strong>Crewing Manager </strong>
           <p class="organization">@ Terra-Union, LTD</p>          
-          <p>
-            My first experience with everyday communication with people at work. Started to develope discussion, clarification, agreement and negotiating an outcome. Also abilities to handle the stress: understand the expectations, avoid multitasking, minimize conflict and get comfortable.
-          </p>
+          <ul class="work-list">
+							<li class="work-list-item">Selection and formation of a crew for ships. </li>
+							<li class="work-list-item">Preparation of crew change plans.</li>
+							<li class="work-list-item">Control of preparatory work on paperwork, personal files, permits.</li>
+							<li class="work-list-item">Operational replacement and organization of uninterrupted work on the selection of ship personnel.</li>
+						</ul>
         </div>
       </div>
 
@@ -166,16 +176,16 @@
         <div class="wrapper">
 
           <div class="item-with-logo">
-            <i class='bx bxl-html5' ></i>HTML5 [basic]
+            <i class='bx bxl-html5' ></i>HTML5 [starter]
           </div>
           <div class="item-with-logo">
-            <i class='bx bxl-css3' ></i>CSS3 [basic]
+            <i class='bx bxl-css3' ></i>CSS3 [starter]
           </div>
           <div class="item-with-logo">
             <i class='bx bxl-javascript' ></i>Javascript [starter] 
           </div>
           <div class="item-with-logo">
-            <i class='bx bxl-git' ></i>Git
+            <i class='bx bxl-git' ></i>Git/Github
           </div>
         </div>
       </div>
